# tilelang-mlir-ascend

./: CMakeLists.txt
.github/workflows/: ci_npuir.yml  docker.yml  test_npuir_wheel.yml
docs/: Autotune使用指南.md
examples/: fp8_lighting_indexer.py
examples/deepseek_v4/: example_sparse_attn_kernel_highperf.py
examples/elementwise/: vec_add_2d_multi_buffer.py
examples/norm/: rms_norm.py
src/op/: ascend.cc  ascend.h
testing/autotune/: reduce_min_autotune.py  reduce_min_carver.py
testing/mlir/Transforms/: insert-workspace.mlir  mark-multibuffer.mlir
testing/npuir/hfusion_ops/: test_not_dev.py  test_relu_dev.py
testing/npuir/linalg_ops/: test_abs_dev.py  test_ln_dev.py  test_rank_reduce_gemm_exp.py  test_rec_dev.py  test_reduce_dev.py  test_rsqrt_dev.py  test_sqrt_dev.py
testing/npuir/pooling_ops/: test_adaptive_avg_pool2d.py  test_adaptive_max_pool2d.py
tilelang/cache/: kernel_cache.py
tilelang/engine/: lower.py  phase.py
tilelang/jit/: jit_npu.py
tilelang/language/: customize_npuir.py
tilelang/tladapter/transforms/: tilelangir.py
tilelang/transform/: pass_config.py
tilelangir/cmake/modules/: AddTileLangIR.cmake
tilelangir/include/tilelangir/Transforms/: Passes.td
tilelangir/lib/Transforms/: CMakeLists.txt  CVSplit.cpp  EnableMultiBuffer.cpp  InsertWorkspace.cpp  MarkMultiBuffer.cpp
